Add placeholders for basic layout

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="/styles.html">
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <nav>
+
+    </nav>
+    <div class="content">
+        
+    </div>
 </body>
 </html>
