--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
-    <link rel="stylesheet" href="/styles.html">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
 
     </nav>
     <div class="content">
-        
+
     </div>
 </body>
 </html>
