Add placeholders for items in dash

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-
+        <div class="dash"></div>
+        <div class="options"></div>
+        <div class="settings"></div>
     </header>
     <nav>
 
