--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 </head>
 <body>
     <header>
-        <div class="dash"></div>
-        <div class="options"></div>
-        <div class="settings"></div>
+        
     </header>
     <nav>
-
+        <div class="dash">
+            <img src="icons/view-dashboard.svg" alt="">
+            <h1>Dashboard</h1>
+        </div>
+        <div class="options"></div>
+        <div class="settings"></div>
     </nav>
     <div class="content">
 
