Fix layout in nav

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             <img src="icons/view-dashboard.svg" alt="">
             <h1>Dashboard</h1>
         </div>
-        <div class="options"></div>
+        <div class="options">
+            <div><img src="icons/home.svg" alt=""><h2>Home</h2></div>
+        </div>
         <div class="settings"></div>
     </nav>
     <div class="content">
