--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         </div>
         <div class="options">
             <div><img src="icons/home.svg" alt=""><h2>Home</h2></div>
+            <div><img src="icons/face-man-profile.svg" alt=""><h2>Profile</h2></div>
+            <div><img src="icons/message-badge.svg" alt=""><h2>Messages</h2></div>
+            <div><img src="icons/history.svg" alt=""><h2>History</h2></div>
+            <div><img src="icons/calendar-check-outline.svg" alt=""><h2>Tasks</h2></div>
+            <div><img src="icons/communitz.svg" alt=""><h2>Communities</h2></div>
         </div>
         <div class="settings"></div>
     </nav>
