Fix margins on nav elements

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
                 <div><img src="icons/calendar-check-outline.svg" alt=""><h2>Tasks</h2></div>
                 <div><img src="icons/communitz.svg" alt=""><h2>Communities</h2></div>
             </div>
-            <div class="settings"></div>
+            <div class="options">
+                <div><img src="icons/home.svg" alt=""><h2>Home</h2></div>
+                <div><img src="icons/home.svg" alt=""><h2>Home</h2></div>
+                <div><img src="icons/home.svg" alt=""><h2>Home</h2></div>
+            </div>
         </div>
     </nav>
     <div class="content">
