--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <div><img src="icons/communitz.svg" alt=""><h2>Communities</h2></div>
             </div>
             <div class="options">
-                <div><img src="icons/home.svg" alt=""><h2>Home</h2></div>
-                <div><img src="icons/home.svg" alt=""><h2>Home</h2></div>
-                <div><img src="icons/home.svg" alt=""><h2>Home</h2></div>
+                <div><img src="icons/cog.svg" alt=""><h2>Settings</h2></div>
+                <div><img src="icons/face-agent.svg" alt=""><h2>Support</h2></div>
+                <div><img src="icons/security.svg" alt=""><h2>Privacy</h2></div>
             </div>
         </div>
     </nav>
