Change display to grid on header and organize css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-        
+        <div>test1</div>
+        <div>test2</div>
     </header>
     <nav>
         <div class="sidebar">
