--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <header>
-        <div>test1</div>
-        <div>test2</div>
+        <div class="top-bar">
+            <div class="search">
+                <img src="icons/magnify.svg" alt="">
+                <div class="search-bar"></div>
+            </div>
+        </div>
+        <div class="btm-bar">test2</div>
     </header>
     <nav>
         <div class="sidebar">
