--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
                 <img src="icons/magnify.svg" alt="">
                 <div class="search-bar"></div>
             </div>
+            <div class="top-right">
+                <img src="icons/bell.svg" alt="notifications">
+                <img src="icons/cute-dog-mascot-cartoon-logo-design-flat-design-style-vector.jpg" alt="profile-picture">
+                <h1>User Name</h1>
+            </div>
         </div>
         <div class="btm-bar">test2</div>
     </header>
