Fix basic layout for top-bar

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <header>
         <div class="top-bar">
             <div class="search">
-                <img src="icons/magnify.svg" alt="">
-                <div class="search-bar"></div>
+                <img class="mid" src="icons/magnify.svg" alt="">
+                <div class="search-bar mid"></div>
             </div>
             <div class="top-right">
-                <img src="icons/bell.svg" alt="notifications">
-                <img src="icons/cute-dog-mascot-cartoon-logo-design-flat-design-style-vector.jpg" alt="profile-picture">
-                <h1>User Name</h1>
+                <img class="mid" src="icons/bell.svg" alt="notifications">
+                <img class="all" src="icons/cute-dog-mascot-cartoon-logo-design-flat-design-style-vector.jpg" alt="profile-picture">
+                <h2 class="mid">User Name</h2>
             </div>
         </div>
         <div class="btm-bar">test2</div>
