Add more advanced styling to top-bar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <div class="top-right">
                 <img class="mid" src="icons/bell.svg" alt="notifications">
-                <img class="all" src="icons/cute-dog-mascot-cartoon-logo-design-flat-design-style-vector.jpg" alt="profile-picture">
+                <img class="all profile" src="icons/cute-dog-mascot-cartoon-logo-design-flat-design-style-vector.jpg" alt="profile-picture">
                 <h2 class="mid">User Name</h2>
             </div>
         </div>
