Add placeholders for elements in btm-bar

--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
                 <h2 class="mid">User Name</h2>
             </div>
         </div>
-        <div class="btm-bar">test2</div>
+        <div class="btm-bar">
+            <div class="greeting">
+                
+            </div>
+            <div class="action">
+
+            </div>
+        </div>
     </header>
     <nav>
         <div class="sidebar">
