Style greeting div

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         </div>
         <div class="btm-bar">
             <div class="greeting">
-                
+                <img class="all profile" src="icons/cute-dog-mascot-cartoon-logo-design-flat-design-style-vector.jpg" alt="">
+                <h4>Hi there,</h4>
+                <h2>User name (@username)</h2>
             </div>
             <div class="action">
 
