Add basic layout and styling for action buttons

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
                 <h2>User name (@username)</h2>
             </div>
             <div class="action">
-
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
             </div>
         </div>
     </header>
