Create styling for shadow class

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <header class="shadow">
         <div class="top-bar">
             <div class="search">
                 <img class="mid" src="icons/magnify.svg" alt="">
@@ -54,7 +54,6 @@
         </div>
     </nav>
     <div class="content">
-
     </div>
 </body>
 </html>
