Add basic html layout for content

--- a/index.html
+++ b/index.html
@@ -54,6 +54,26 @@
         </div>
     </nav>
     <div class="content">
+        <div class="two-side">
+            <div class="display">
+                <h2>Your projects</h2>
+                <div class="projects">
+
+                </div>
+            </div>
+            <div class="display">
+                <h2>Announcments</h2>
+                <div class="announcments">
+                    
+                </div>
+            </div>
+            <div class="display">
+                <h2>Trending</h2>
+                <div class="trending">
+
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
