Style outer grid divs

--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
         </div>
     </nav>
     <div class="content">
-        <div class="two-side">
-            <div class="display">
-                <h2>Your projects</h2>
-                <div class="projects">
+        <div class="display">
+            <h2>Your projects</h2>
+            <div class="projects">
 
-                </div>
             </div>
+        </div>
+        <div class="right-nav">
             <div class="display">
                 <h2>Announcments</h2>
                 <div class="announcments">
-                    
+
                 </div>
             </div>
             <div class="display">
