Create layout for projects

--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
         <div class="display">
             <h2>Your projects</h2>
             <div class="projects">
-
+                <div class="project"></div>
+                <div class="project"></div>
+                <div class="project"></div>
+                <div class="project"></div>
+                <div class="project"></div>
+                <div class="project"></div>
             </div>
         </div>
         <div class="right-nav">
