Add stling for project text

--- a/index.html
+++ b/index.html
@@ -57,12 +57,28 @@
         <div class="display">
             <h2>Your projects</h2>
             <div class="projects">
-                <div class="project shadow"></div>
-                <div class="project shadow"></div>
-                <div class="project shadow"></div>
-                <div class="project shadow"></div>
-                <div class="project shadow"></div>
-                <div class="project shadow"></div>
+                <div class="project shadow">
+                    <div class="text">
+                        <h3>Super Cool Project</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem debitis beatae suscipit cupiditate atque saepe, culpa nisi nostrum similique incidunt repudiandae, at porro veritatis, quis quisquam quod dignissimos odio recusandae.</p>
+                    </div>
+                    <div class="icons"></div>
+                </div>
+                <div class="project shadow">
+                    <h3>Less Cool Project</h3>
+                </div>
+                <div class="project shadow">
+                    <h3>Impossible App</h3>
+                </div>
+                <div class="project shadow">
+                    <h3>Easy Peasy App</h3>
+                </div>
+                <div class="project shadow">
+                    <h3>Add Blocker</h3>
+                </div>
+                <div class="project shadow">
+                    <h3>Money Maker</h3>
+                </div>
             </div>
         </div>
         <div class="right-nav">
