Finish styling for porject divs

--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
                         <h3>Super Cool Project</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem debitis beatae suscipit cupiditate atque saepe, culpa nisi nostrum similique incidunt repudiandae, at porro veritatis, quis quisquam quod dignissimos odio recusandae.</p>
                     </div>
-                    <div class="icons"></div>
+                    <div class="icons">
+                        <img src="icons/star-plus.svg" alt="">
+                        <img src="icons/eye-plus-outline.svg" alt="">
+                        <img src="icons/share-variant.svg" alt="">
+                    </div>
                 </div>
                 <div class="project shadow">
                     <h3>Less Cool Project</h3>
