Create content for remaining projects

--- a/index.html
+++ b/index.html
@@ -69,19 +69,59 @@
                     </div>
                 </div>
                 <div class="project shadow">
-                    <h3>Less Cool Project</h3>
+                    <div class="text">
+                        <h3>Less Cool Project</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat eaque ratione accusantium amet adipisci illo cumque optio aliquam inventore. Corporis rerum a ut fugiat vel obcaecati dolores suscipit laborum nihil.</p>
+                    </div>
+                    <div class="icons">
+                        <img src="icons/star-plus.svg" alt="">
+                        <img src="icons/eye-plus-outline.svg" alt="">
+                        <img src="icons/share-variant.svg" alt="">
+                    </div>
                 </div>
                 <div class="project shadow">
-                    <h3>Impossible App</h3>
+                    <div class="text">
+                        <h3>Impossible App</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos temporibus optio, repellendus quisquam sapiente fuga ex pariatur vel est, delectus voluptates doloremque maiores vero. Autem alias placeat quis officia cumque?</p>
+                    </div>
+                    <div class="icons">
+                        <img src="icons/star-plus.svg" alt="">
+                        <img src="icons/eye-plus-outline.svg" alt="">
+                        <img src="icons/share-variant.svg" alt="">
+                    </div>
                 </div>
                 <div class="project shadow">
-                    <h3>Easy Peasy App</h3>
+                    <div class="text">
+                        <h3>Easy Peasy App</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, dolore. Hic expedita ut voluptatem aperiam perferendis in ad unde molestiae, cum aut a, nisi commodi beatae, dolores nesciunt vitae aliquam!</p>
+                    </div>
+                    <div class="icons">
+                        <img src="icons/star-plus.svg" alt="">
+                        <img src="icons/eye-plus-outline.svg" alt="">
+                        <img src="icons/share-variant.svg" alt="">
+                    </div>
                 </div>
                 <div class="project shadow">
-                    <h3>Add Blocker</h3>
+                    <div class="text">
+                        <h3>Add Blocker</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus molestias odio accusantium asperiores ipsa, adipisci est pariatur unde quam, similique debitis ducimus facilis molestiae dicta illo voluptate consectetur iure?</p>
+                    </div>
+                    <div class="icons">
+                        <img src="icons/star-plus.svg" alt="">
+                        <img src="icons/eye-plus-outline.svg" alt="">
+                        <img src="icons/share-variant.svg" alt="">
+                    </div>
                 </div>
                 <div class="project shadow">
-                    <h3>Money Maker</h3>
+                    <div class="text">
+                        <h3>Money Maker</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, quo numquam quaerat quasi doloribus quisquam nulla temporibus aut beatae ullam eum adipisci labore tenetur earum cupiditate et odio omnis eligendi!</p>
+                    </div>
+                    <div class="icons">
+                        <img src="icons/star-plus.svg" alt="">
+                        <img src="icons/eye-plus-outline.svg" alt="">
+                        <img src="icons/share-variant.svg" alt="">
+                    </div>
                 </div>
             </div>
         </div>
