Add divs for right nav

--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
         <div class="right-nav">
             <div class="display">
                 <h2>Announcments</h2>
-                <div class="announcments">
+                <div class="announcments shadow">
 
                 </div>
             </div>
             <div class="display">
                 <h2>Trending</h2>
-                <div class="trending">
+                <div class="trending shadow">
 
                 </div>
             </div>
