Fix announcement typo(only in content)

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div>
         <div class="right-nav">
             <div class="display">
-                <h2>Announcments</h2>
+                <h2>Announcements</h2>
                 <div class="announcments shadow">
                     <div class="event">
                         <h4>Site Maintenance</h4>
