Add basic layour for trending

--- a/index.html
+++ b/index.html
@@ -148,7 +148,22 @@
             <div class="display">
                 <h2>Trending</h2>
                 <div class="trending shadow">
+                    <div class="trend">
+                        <img src="icons/cute-bear-with-coffee-cup-cartoon-illustration-vector.jpg" alt="">
+                        <div class="tag">
+                            <h4>@bear</h4>
+                            <h4>World Peace Maker</h4>
+                        </div>
+                    </div>
+                    <div class="trend">
 
+                    </div>
+                    <div class="trend">
+
+                    </div>
+                    <div class="trend">
+
+                    </div>
                 </div>
             </div>
         </div>
