Style trending div

--- a/index.html
+++ b/index.html
@@ -156,13 +156,25 @@
                         </div>
                     </div>
                     <div class="trend">
-
+                        <img src="icons/cute-dog-mascot-cartoon-logo-design-flat-design-style-vector.jpg" alt="">
+                        <div class="tag">
+                            <h4>@username</h4>
+                            <h4>Super Cool Project</h4>
+                        </div>
                     </div>
                     <div class="trend">
-
+                        <img src="icons/right_cat.png" alt="">
+                        <div class="tag">
+                            <h4>@cutie-cat</h4>
+                            <h4>Animal GPT</h4>
+                        </div>
                     </div>
                     <div class="trend">
-
+                        <img src="icons/cute-fox-sitting-cartoon-icon-illustration-animal-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg" alt="">
+                        <div class="tag">
+                            <h4>@bear</h4>
+                            <h4>World Peace Maker</h4>
+                        </div>
                     </div>
                 </div>
             </div>
