--- a/index.html
+++ b/index.html
@@ -131,17 +131,17 @@
                 <div class="announcments shadow">
                     <div class="event">
                         <h4>Site Maintenance</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, recusandae suscipit vitae rem ad magni nisi est nostrum veritatis quae qui enim cumque eum maxime minima ratione magnam architecto ipsum!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, recusandae suscipit vitae rem ad magni nisi est nostrum veritatis quae qui ...</p>
                     </div>
                     <hr>
                     <div class="event">
                         <h4>Community Share Day</h4>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi harum eaque ea vero! Molestias enim earum dolorem molestiae? Nobis quia sint blanditiis quidem expedita illum nesciunt, sapiente aperiam perferendis officia.</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi harum eaque ea vero! Molestias enim earum dolorem molestiae...</p>
                     </div>
                     <hr>
                     <div class="event">
                         <h4>Updated Privacy Policy</h4>
-                        <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa accusantium pariatur excepturi illo delectus cum culpa animi distinctio. Doloribus, ipsa laboriosam? Suscipit eligendi dolorem inventore illum rem, saepe libero ab.</P>
+                        <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa accusantium pariatur excepturi illo delectus cum culpa animi...</P>
                     </div>
                 </div>
             </div>
